--- a/locale/fof-pretty-mail.yml
+++ b/locale/fof-pretty-mail.yml
@@ -15,16 +15,16 @@ fof-pretty-mail:
         'Recomenda-se usar "$forumStyle" para esses e-mails, pois eles podem
         conter BBCODE. Esses e-mails também têm "$user" disponível, que contém
         todo o modelo do usuário que está sendo enviado por email.'
-      help:
-        '"$body"conterá o conteúdo real do email, "$forumStyle" contém o
+      help: >-
+        "$body"conterá o conteúdo real do email, "$forumStyle" contém o
         <strong>CSS inteiro do fórum</strong>, "$baseUrl" contém o URL do seu
         fórum, "$settings"permite que você interaja com
         SettingsRepositoryInterface,  "$link" contém o link no email. Veja cada
-        modelo para saber como usar cada variável.'
+        modelo para saber como usar cada variável.
     css_settings:
       label: Configurações CSS
-      help:
-        'Você pode optar por incluir o CSS do fórum no código HTML do email. Se
+      help: >-
+        Você pode optar por incluir o CSS do fórum no código HTML do email. Se
         você habilitar isso, poderá ter problemas com determinados provedores de
-        email.'
+        email.
       switch_label: Incluir CSS completo do fórum
