--- a/locale/fof-pretty-mail.yml
+++ b/locale/fof-pretty-mail.yml
@@ -1,30 +1,19 @@
 fof-pretty-mail:
   admin:
     nav:
-      desc: Personalize seus modelos de email em HTML.
+      desc: Customize your HTML email templates.
     settings:
-      label: Modelos de email
-      reset: Reverter para o modelo padrão
-      confirm: Tem certeza de que deseja reverter para o modelo de e-mail de ações para
-      default: Modelo padrão
-      newPost: Flarum/subscriptions E-mail de novo post
-      userMentioned: Flarum/mentions E-mail de usuário @mencionado
-      postMentioned: Flarum/mentions E-mail usuário @mancionado no post
-      notifications: Modelos de notificação
-      notificationHelp:
-        'Recomenda-se usar "$forumStyle" para esses e-mails, pois eles podem
-        conter BBCODE. Esses e-mails também têm "$user" disponível, que contém
-        todo o modelo do usuário que está sendo enviado por email.'
-      help: >-
-        "$body"conterá o conteúdo real do email, "$forumStyle" contém o
-        <strong>CSS inteiro do fórum</strong>, "$baseUrl" contém o URL do seu
-        fórum, "$settings"permite que você interaja com
-        SettingsRepositoryInterface,  "$link" contém o link no email. Veja cada
-        modelo para saber como usar cada variável.
+      label: Email Templates
+      reset: Revert to Default
+      confirm: Are you sure you want to revert to the stock email template for
+      default: Default Template
+      newPost: Flarum/subscriptions New Post Email
+      userMentioned: Flarum/mentions User Mentioned Email
+      postMentioned: Flarum/mentions Post Mentioned Email
+      notifications: Notification templates
+      notificationHelp: 'Recomenda-se usar "$forumStyle" para esses e-mails, pois eles podem conter BBCODE. Esses e-mails também têm "$user" disponível, que contém todo o modelo do usuário que está sendo enviado por email.'
+      help: '"$body"conterá o conteúdo real do email, "$forumStyle" contém o <strong>CSS inteiro do fórum</strong>, "$baseUrl" contém o URL do seu fórum, "$settings"permite que você interaja com SettingsRepositoryInterface,  "$link" contém o link no email. Veja cada modelo para saber como usar cada variável.'
     css_settings:
-      label: Configurações CSS
-      help: >-
-        Você pode optar por incluir o CSS do fórum no código HTML do email. Se
-        você habilitar isso, poderá ter problemas com determinados provedores de
-        email.
-      switch_label: Incluir CSS completo do fórum
+      label: CSS settings
+      help: Você pode optar por incluir o CSS do fórum no código HTML do email. Se você habilitar isso, poderá ter problemas com determinados provedores de email.
+      switch_label: Include full forum CSS
